aws/kafka-proxy/dedicated/workspace/nlb-listeners-az2.tf

resource "aws_lb_target_group" "bootstrap_az2" {
  name     = "${var.environment_name}-az2-bs"
  port     = var.nlb_bootstrap_port
  protocol = "TCP"

 health_check {
   enabled = true

   healthy_threshold   = 2
   unhealthy_threshold = 2
   timeout             = 2
   interval            = 5

   # port     = 9080
   protocol = "TCP"
   # path     = "/health"
   # matcher  = null
 }

  vpc_id = aws_vpc.main.id
}

resource "aws_lb_listener" "bootstrap_az2" {
  load_balancer_arn = aws_lb.az2.arn
  port              = var.nlb_bootstrap_port
  protocol          = "TLS"
  ssl_policy        = var.ssl_policy
  certificate_arn   = aws_acm_certificate.kafka.arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.bootstrap_az2.arn
  }
}

locals {
  ports_az2 = [for p in range(
    var.nlb_min_port + local.zone_broker_offsets["az2"],
    var.nlb_min_port + local.zone_broker_offsets["az2"] + var.brokers_per_nlb * 3,
    3,
  ): tostring(p)]
}

resource "aws_lb_target_group" "broker_az2" {
  for_each = toset(local.ports_az2)
  name = "${var.environment_name}-2-${each.key}"
  port = tonumber(each.key)
  protocol = "TCP"

 health_check {
   enabled = true

   healthy_threshold   = 2
   unhealthy_threshold = 2
   timeout             = 2
   interval            = 5

   # port     = 9080
   protocol = "TCP"
   # path     = "/health"
   # matcher  = null
 }

  vpc_id = aws_vpc.main.id
}

resource "aws_lb_listener" "broker_az2" {
  for_each = toset(local.ports_az2)

  load_balancer_arn = aws_lb.az2.arn
  port              = tonumber(each.key)
  protocol          = "TLS"
  ssl_policy        = var.ssl_policy
  certificate_arn   = aws_acm_certificate.kafka.arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.broker_az2[each.key].arn
  }
}
